Wed Mar  9 14:27:31 UTC 2011  Johnny Willemsen  <jwillemsen@remedy.nl>

        * tao/Client_Strategy_Factory.h:
        * tao/Client_Strategy_Factory.cpp:
          Made all methods except the destructor pure virtual, this is an
          abstract base class

Wed Mar  9 10:48:48 UTC 2011  Vladimir Zykov  <vladimir.zykov@prismtech.com>

        * tao/GIOP_Message_Base.cpp:
        * TAO_IDL/be/be_visitor_arg_traits.cpp:
        * TAO_IDL/be/be_visitor_array/array_ci.cpp:
        * TAO_IDL/be/be_sequence.cpp:
        * orbsvcs/orbsvcs/PortableGroup/UIPMC_Profile.cpp:
          Changed my previous fix to these files. That change was too shallow.

        * orbsvcs/orbsvcs/Notify/XML_Saver.cpp:
        * orbsvcs/orbsvcs/PortableGroup/PG_Object_Group_Manipulator.cpp:
        * orbsvcs/orbsvcs/Scheduler_Factory.cpp:
        * orbsvcs/tests/Notify/lib/Task_Stats.cpp:
        * orbsvcs/tests/FT_App/FT_Client.cpp:
        * orbsvcs/tests/FT_App/FT_Creator.cpp:
        * orbsvcs/tests/FT_App/FT_Creator.h:
        * utils/catior/Catior_i.cpp:
        * utils/logWalker/HostProcess.cpp:
        * utils/logWalker/Log.cpp:
          Fixed use of types for printf format.

Mon Mar  7 16:19:40 UTC 2011  Vladimir Zykov  <vladimir.zykov@prismtech.com>

        * orbsvcs/orbsvcs/PortableGroup/UIPMC_Profile.cpp:
        * tao/GIOP_Message_Base.cpp:
        * TAO_IDL/be/be_visitor_arg_traits.cpp:
        * TAO_IDL/be/be_codegen.cpp:
        * TAO_IDL/be/be_helper.cpp:
        * TAO_IDL/be/be_visitor_array/array_ci.cpp:
        * TAO_IDL/be/be_sequence.cpp:
        * TAO_IDL/be_include/be_helper.h:
          Fixed warnings from incorrect use of printf format.

Mon Mar  7 09:44:39 UTC 2011  Vladimir Zykov  <vladimir.zykov@prismtech.com>

        * orbsvcs/orbsvcs/SSLIOP/SSLIOP_Factory.cpp:
          Fixed leaks in ACE_SSL library. This is a part of the fix
          for bug#3418.

        * orbsvcs/orbsvcs/SSLIOP/SSLIOP_Connector.cpp: